--- a/Pages/AdminConfiguracion.razor
+++ b/Pages/AdminConfiguracion.razor
@@ -58,6 +58,7 @@
                             RowHover="true"
                             AllowPaging="false"
                             ShowPagingSummary="false"
+                            AllowSorting="true" 
                             Style="width:100%;">
                 <Columns>
                     <RadzenDataGridColumn TItem="ColorModel"
@@ -130,6 +131,7 @@
                             AllowPaging="false"
                             ShowPagingSummary="false"
                             AllowFiltering="true"
+                            AllowSorting="true" 
                             FilterMode="FilterMode.Advanced"
                             FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
                             Style="width:100%;">
