--- a/Pages/AdminUsuario.razor
+++ b/Pages/AdminUsuario.razor
@@ -50,6 +50,7 @@
                         Data="@usuarios"
                         AllowFiltering="true"
                         FilterMode="FilterMode.Advanced"
+                        AllowSorting="true" 
                         FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
                         AllowPaging="false"
                         RowHover="true"
