--- a/Pages/InvestFragancias.razor
+++ b/Pages/InvestFragancias.razor
@@ -57,6 +57,7 @@
                         RowHover="true"
                         AllowPaging="false"
                         AllowFiltering="true"
+                        AllowSorting="true" 
                         FilterMode="FilterMode.Advanced"
                         FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
                         Style="width:100%;">
