--- a/Pages/NuevoParticipante.razor
+++ b/Pages/NuevoParticipante.razor
@@ -1,7 +1,7 @@
 @using NeuromktApi.Models
 @using NeuromktApi.Services
 @inject IEParticipante EParticipante
-
+@inject UserSession UserSession
 @using Microsoft.AspNetCore.Components
 @using Npgsql
 
@@ -164,7 +164,7 @@
         {
             if (!EsEdicion)
             {
-                // ALTA
+                modelo.CreadoPor = UserSession.Email;
                 await EParticipante.CrearParticipanteAsync(modelo);
             }
             else
